--- a/electronics/index.html
+++ b/electronics/index.html
@@ -3,34 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>Doug Shaffer &dash; Electronics Training and Activities</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <header>
       <h1>Doug Shaffer &dash; Electronics Training and Activities</h1>
-      <p>Below is a summary of the electronics projects that I've worked for my training classes and independent experimentation.  This work includes the use and programming of different microcontrollers using the C programming language as well as general circuit design to build the circuits.  Integrated Development Environments (IDE), an oscilloscope, a multimeter, and a digital logic analyzer were also used.</p>
+      <p>Below is a summary of the electronics projects that I've completed for my training classes and independent experimentation.  This work includes the use of different microcontrollers, programming using the C programming language, as well as general circuit design to build the projects.  Integrated Development Environments (IDE), an oscilloscope, a multimeter, and a digital logic analyzer were also used.</p>
     </header>
 
     <section>
       <ol>
         <li>
           <details open>
-            <summary>Georgia Tech - The Mechatronics Revolution</summary>
-            The Mechatronics Revolution training class taught the basics of microcontroller programming and the typical associated hardware components.  
-            <br>
+            <summary>Georgia Tech &dash; The Mechatronics Revolution</summary>
+            The Mechatronics Revolution training class taught the basics of microcontroller programming and use of the associated hardware components.  
+            <br><br>
             The class utilized the TI MSP432 microcontroller, h-bridge motor drivers, bump sensors, proximity sensor, and UART communication to a laptop.  
-            <br>The labs built one on top of another until the sucessful completing of the robotic car shown below.  Examples of the C programming methods were shown in the class but the project labs required us to do the programming and troubleshooting to get the project to work.
+            <br><br>
+            The labs built on top of one another until the sucessful completion of the robotic car shown below.  Examples of the C programming methods were explained in the class lectures but the labs required us to do the programming and troubleshooting to get the project to work.
             <figure>
               <img src="https://raw.githubusercontent.com/dshaffer66/site/main/electronics/media/01_IMG_2614.jpg" width = "600" alt="Robotic Car">
               <figcaption>Robotic Car Project from the Georgia Tech Mechatronics Revolution Class</figcaption>
             </figure>
           </details>
         </li>
+        <br><br>
         <li>
           <details open>
-            <summary>University of Colorado Embedding Sensors and Motors Specialization &dash; Load Cell Lab</summary>
+            <summary>University of Colorado &dash; Embedding Sensors and Motors Specialization &dash; Load Cell Lab</summary>
             The Embedding Sensors and Motors Specialization is a series of classes that taught the concepts of numerous types of sensors and motors.
-            <br>
-            The was class taught using the Cypress PSOC 5LP microcontroller and associated development environment, IDE.  This lab used a load cell, uA741 amplifiers, LCD screen using parallel communication, and a PicoScope oscilloscope.
+            <br><br>
+            The class was taught using the Cypress PSOC 5LP microcontroller and its associated development environment, IDE.  This lab used a load cell, uA741 amplifiers, LCD screen using parallel communication, and a PicoScope oscilloscope.
             <figure>
               <video src="https://raw.githubusercontent.com/dshaffer66/site/main/electronics/media/02_IMG_2748.MOV" width = "600" controls>Your browser doesn't support the <code>video</code> element.</video>
               <figcaption>Load Cell Lab Video 1</figcaption>
@@ -41,20 +44,22 @@
             </figure>
           </details>
         </li>
+        <br><br>
         <li>
           <details open>
-            <summary>University of Colorado Embedding Sensors and Motors Specialization &dash; PID Lab</summary>
-            The PID Lab again used the Cypress PSOC 5LP microcontroller and PicoScope oscilloscope.  In the lab, we programmed a PID (Proportional, Integral, Derivative) control loop to control a motor to reach the desired output.
+            <summary>University of Colorado &dash; Embedding Sensors and Motors Specialization &dash; PID Lab</summary>
+            The PID Lab used the Cypress PSOC 5LP microcontroller and PicoScope oscilloscope.  In the lab, we programmed a PID (Proportional, Integral, Derivative) control loop to control a motor to reach the desired output.
             <figure>
               <img src="https://raw.githubusercontent.com/dshaffer66/site/main/electronics/media/03_IMG_2898.jpg" width = "600" alt="PID Control Loop">
               <figcaption>Oscilloscope Output Showing the PID Control Loop</figcaption>
             </figure>
           </details>
         </li>
+        <br><br>
         <li>
           <details open>
             <summary>555 Timer IC in Astable Mode</summary>
-            I experimented independently with the 555 timer IC and built it into a circuit to behave in astable mode.  This allowed it to produce a pulse width modulated (PWM) signal to drive a brushed DC electric motor.  A potentiometer was used to adjust the resistance in the circuit which controls the speed of the motor.
+            I experimented independently with the 555 timer IC and built it into a circuit to behave in astable mode.  This allowed it to produce a pulse width modulated (PWM) signal to drive a brushed DC electric motor.  A potentiometer was used to adjust the resistance in the circuit in order to control the speed of the motor.
             <figure>
               <video src="https://raw.githubusercontent.com/dshaffer66/site/main/electronics/media/04_IMG_3171.MOV" width = "600" controls>Your browser doesn't support the <code>video</code> element.</video>
               <figcaption>555 Timer in Astable Mode</figcaption>
@@ -71,36 +76,40 @@
             </figure>
           </details>
         </li>
+        <br><br>
         <li>
           <details open>
             <summary>555 Timer IC in Bistable Mode</summary>
-            I experimented independently with the 555 timer IC and built it into a circuit to behave in bistable mode.  This circuit was paired with the astable mode circuit from before.  The bistable mode allowed the motor to start at a push of one button and continue to run until a second button is pushed.
+            I experimented independently with the 555 timer IC and built it into a circuit to behave in bistable mode.  This circuit was paired with the astable mode circuit from before.  The bistable mode allowed the motor to start with a push of one button and continue to run until a second button is pushed.
             <figure>
               <video src="https://raw.githubusercontent.com/dshaffer66/site/main/electronics/media/06_IMG_3170.MOV" width = "600" controls>Your browser doesn't support the <code>video</code> element.</video>
               <figcaption>555 Timer in Bistable Mode</figcaption>
             </figure>
           </details>
         </li>
+        <br><br>
         <li>
           <details open>
             <summary>Motor Driver using a Microcontroller and Astable 555 Timer</summary>
-            I built a motor driver using the 555 timer in astable mode, as used before, and controlled the start and stop of the motor using the Cypress PSOC 5LP microcontroller.  The program was written to send signals to the circuit through a MOSFET to start and stop the motor at specific time periods.
+            I built a DC motor driver using the 555 timer in astable mode, as used before, and controlled the start and stop of the motor using the Cypress PSOC 5LP microcontroller.  The program was written to send signals to the circuit through a MOSFET to start and stop the motor at specific time periods.
             <figure>
               <video src="https://raw.githubusercontent.com/dshaffer66/site/main/electronics/media/07_IMG_3172.MOV" width = "600" controls>Your browser doesn't support the <code>video</code> element.</video>
               <figcaption>Motor Driver using a Microcontroller and Astable 555 Timer</figcaption>
             </figure>
           </details>
         </li>
+        <br><br>
         <li>
           <details open>
             <summary>Motor Driver using PWM Signals from a Microcontroller</summary>
-            I programmed the Cypress PSOC 5LP microcontroller to drive the motor using Pulse Width Modulated (PWM) signals.  The duty cycle of the PWM signal controls how fast the motor should turn.  The program was written to step up the PWM signals after specific time intervals.  The PWM signal is then gradually increased from off to full speed and then gradually decreased to stop the motor.
+            I programmed the Cypress PSOC 5LP microcontroller to drive a DC motor using Pulse Width Modulated (PWM) signals.  The duty cycle of the PWM signal controls how fast the motor should turn.  The program was written to step up the PWM duty cycle after specific time intervals.  The PWM duty cycle is then gradually increased from off to full speed and then gradually decreased to stop the motor.
             <figure>
               <video src="https://raw.githubusercontent.com/dshaffer66/site/main/electronics/media/08_IMG_3181.MOV" width = "600" controls>Your browser doesn't support the <code>video</code> element.</video>
               <figcaption>Motor Driver using PWM Signals from a Microcontroller</figcaption>
             </figure>
           </details>
         </li>
+        <br><br>
         <li>
           <details open>
             <summary>Forward and Reverse using an H-Bridge Motor Driver</summary>
@@ -111,36 +120,40 @@
             </figure>
           </details>
         </li>
+        <br><br>
         <li>
           <details open>
             <summary>Bluetooth Control for Motor Speed</summary>
-            An HM-18 Bluetooth Module was added to the circuit with the Cypress PSOC 5LP microcontroller.  The Bluetooth module allowed for serial communication with an Apple iPhone.  A basic joystick app was used to send different signals through Bluetooth to the microcontroller.  The program written for the microcontroller interprets those signals and sets the motor to run at 4 different speeds depending on which button was pushed.
+            An HM-18 Bluetooth Module was added to the circuit with the Cypress PSOC 5LP microcontroller.  The Bluetooth module allowed for UART serial communication with an Apple iPhone.  A basic joystick app was used to send different signals through Bluetooth to the microcontroller.  The program written for the microcontroller then interprets those signals and sets the motor to run at 4 different speeds, depending on which joystick button was pushed.
             <figure>
               <video src="https://raw.githubusercontent.com/dshaffer66/site/main/electronics/media/10_IMG_3332.MOV" width = "600" controls>Your browser doesn't support the <code>video</code> element.</video>
               <figcaption>Bluetooth Control with iPhone</figcaption>
             </figure>
           </details>
         </li>
+        <br><br>
         <li>
           <details open>
             <summary>Bluetooth Control for Motor Speed and Direction</summary>
-            The HM-18 Bluetooth Module and Cypress PSOC 5LP microcontroller were used in conjunction with a DRV8833 Motor Driver.  The motor driver allows the motor to spin in both forward and reverse directions.  The joystic app as used to send speed and direction signals to the microcontroller through Bluetooth serial communication.
+            The HM-18 Bluetooth Module and Cypress PSOC 5LP microcontroller were used in conjunction with a DRV8833 Motor Driver.  The motor driver allows the motor to spin in both forward and reverse directions.  The joystick app was used to send speed and direction signals to the microcontroller through Bluetooth serial communication.
             <figure>
               <video src="https://raw.githubusercontent.com/dshaffer66/site/main/electronics/media/11_IMG_3339.MOV" width = "600" controls>Your browser doesn't support the <code>video</code> element.</video>
               <figcaption>Bluetooth Speed and Direction Control with iPhone</figcaption>
             </figure>
           </details>
         </li>
+        <br><br>
         <li>
           <details open>
             <summary>Unipolar Stepper Motor</summary>
-            A circuit was built using a 28BYJ-48 stepper motor, ULN2003 stepper motor driver and the Cypress PSOC 5LP microcontroller.  The microcontroller was programmed to drive the stepper motor forward and reverse through defined positions.  The program was written to move through individual steps by using the half-step method.
+            A circuit was built using a 28BYJ-48 stepper motor, ULN2003 stepper motor driver and the Cypress PSOC 5LP microcontroller.  The microcontroller was programmed to drive the stepper motor forward and reverse through defined positions.  The program was written to move through individual steps by using the half-step drive method.
             <figure>
               <video src="https://raw.githubusercontent.com/dshaffer66/site/main/electronics/media/12_IMG_3355.MOV" width = "600" controls>Your browser doesn't support the <code>video</code> element.</video>
               <figcaption>Stepper Motor Drive</figcaption>
             </figure>
           </details>
         </li>
+        <br><br>
         <li>
           <details open>
             <summary>Bluetooth Stepper Motor Control</summary>
